syntax = "proto3";

package calculator;

option go_package = "github.com/dhany007/learn-grpc/calculator/proto";

message PrimeRequest {
  int32 Number = 1;
}

message PrimeResponse {
  int32 Result = 1;
}
