syntax = "proto3";

package calculator;

option go_package = "github.com/dhany007/learn-grpc/calculator/proto";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 Result = 1;
}

